.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:29:24 **** Build of configuration Debug for project F_Punteros ****
make all 
Building file: ../src/F_Punteros.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/F_Punteros.d" -MT"src/F_Punteros.o" -o "src/F_Punteros.o" "../src/F_Punteros.c"
../src/F_Punteros.c: In function ‘main’:
../src/F_Punteros.c:20:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(a));//cantidad de bytes que ocupa una variable
                           ~^
                           %ld
../src/F_Punteros.c:21:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(o));
                           ~^
                           %ld
../src/F_Punteros.c:22:28: warning: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%f", sizeof(f));
                           ~^
                           %ld
../src/F_Punteros.c:17:6: warning: unused variable ‘c’ [-Wunused-variable]
  int c;
      ^
../src/F_Punteros.c:16:6: warning: unused variable ‘b’ [-Wunused-variable]
  int b;
      ^
Finished building: ../src/F_Punteros.c
 
Building target: F_Punteros
Invoking: GCC C Linker
gcc  -o "F_Punteros"  ./src/F_Punteros.o   
Finished building target: F_Punteros
 
17:30:15 **** Incremental Build of configuration Debug for project E_EjercicioMeet5FuncionSumar ****
make all 
make: No se hace nada para 'all'.
17:30:45 **** Incremental Build of configuration Debug for project F_Punteros ****
make all 
make: No se hace nada para 'all'.
17:31:39 **** Incremental Build of configuration Debug for project F_Punteros ****
make all 
Building file: ../src/F_Punteros.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/F_Punteros.d" -MT"src/F_Punteros.o" -o "src/F_Punteros.o" "../src/F_Punteros.c"
../src/F_Punteros.c: In function ‘main’:
../src/F_Punteros.c:20:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(a));//cantidad de bytes que ocupa una variable
                           ~^
                           %ld
../src/F_Punteros.c:21:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(o));
                           ~^
                           %ld
../src/F_Punteros.c:22:28: warning: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%f", sizeof(f));
                           ~^
                           %ld
../src/F_Punteros.c:23:32: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
src/subdir.mk:18: recipe for target 'src/F_Punteros.o' failed
  printf("La direccion de a es %d", &a));
                               ~^   ~~
                               %ls
../src/F_Punteros.c:23:39: error: expected ‘;’ before ‘)’ token
  printf("La direccion de a es %d", &a));
                                       ^
../src/F_Punteros.c:23:39: error: expected statement before ‘)’ token
../src/F_Punteros.c:17:6: warning: unused variable ‘c’ [-Wunused-variable]
  int c;
      ^
../src/F_Punteros.c:16:6: warning: unused variable ‘b’ [-Wunused-variable]
  int b;
      ^
make: *** [src/F_Punteros.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:31:55 **** Incremental Build of configuration Debug for project F_Punteros ****
make all 
Building file: ../src/F_Punteros.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/F_Punteros.d" -MT"src/F_Punteros.o" -o "src/F_Punteros.o" "../src/F_Punteros.c"
../src/F_Punteros.c: In function ‘main’:
../src/F_Punteros.c:20:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(a));//cantidad de bytes que ocupa una variable
                           ~^
                           %ld
../src/F_Punteros.c:21:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(o));
                           ~^
                           %ld
../src/F_Punteros.c:22:28: warning: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%f", sizeof(f));
                           ~^
                           %ld
../src/F_Punteros.c:23:32: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
  printf("La direccion de a es %d", &a);
                               ~^   ~~
                               %ls
../src/F_Punteros.c:17:6: warning: unused variable ‘c’ [-Wunused-variable]
  int c;
      ^
../src/F_Punteros.c:16:6: warning: unused variable ‘b’ [-Wunused-variable]
  int b;
      ^
Finished building: ../src/F_Punteros.c
 
Building target: F_Punteros
Invoking: GCC C Linker
gcc  -o "F_Punteros"  ./src/F_Punteros.o   
Finished building target: F_Punteros
 
17:32:13 **** Incremental Build of configuration Debug for project F_Punteros ****
make all 
Building file: ../src/F_Punteros.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/F_Punteros.d" -MT"src/F_Punteros.o" -o "src/F_Punteros.o" "../src/F_Punteros.c"
../src/F_Punteros.c: In function ‘main’:
../src/F_Punteros.c:20:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(a));//cantidad de bytes que ocupa una variable
                           ~^
                           %ld
../src/F_Punteros.c:21:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(o));
                           ~^
                           %ld
../src/F_Punteros.c:22:28: warning: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%f", sizeof(f));
                           ~^
                           %ld
../src/F_Punteros.c:23:32: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
  printf("La direccion de a es %d", &a);
                               ~^   ~~
                               %ls
../src/F_Punteros.c:24:32: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
  printf("La direccion de a es %d", &b);
                               ~^   ~~
                               %ls
../src/F_Punteros.c:17:6: warning: unused variable ‘c’ [-Wunused-variable]
  int c;
      ^
Finished building: ../src/F_Punteros.c
 
Building target: F_Punteros
Invoking: GCC C Linker
gcc  -o "F_Punteros"  ./src/F_Punteros.o   
Finished building target: F_Punteros
 
17:46:58 **** Incremental Build of configuration Debug for project F_Punteros ****
make all 
Building file: ../src/F_Punteros.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/F_Punteros.d" -MT"src/F_Punteros.o" -o "src/F_Punteros.o" "../src/F_Punteros.c"
../src/F_Punteros.c: In function ‘main’:
../src/F_Punteros.c:20:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(a));//cantidad de bytes que ocupa una variable
                           ~^
                           %ld
../src/F_Punteros.c:21:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%d", sizeof(o));
                           ~^
                           %ld
../src/F_Punteros.c:22:28: warning: format ‘%f’ expects argument of type ‘double’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
  printf("El size de A es :%f", sizeof(f));
                           ~^
                           %ld
../src/F_Punteros.c:17:6: warning: unused variable ‘c’ [-Wunused-variable]
  int c;
      ^
Finished building: ../src/F_Punteros.c
 
Building target: F_Punteros
Invoking: GCC C Linker
gcc  -o "F_Punteros"  ./src/F_Punteros.o   
Finished building target: F_Punteros
 
